Actualizamos versión de librerías y java.