@@ -21,7 +21,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
-            <version>1.16.6</version>
+            <version>1.18.10</version>
         </dependency>
 
         <dependency>
@@ -29,6 +29,12 @@
             <artifactId>swagger-core</artifactId>
             <scope>compile</scope>
             <version>1.5.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.ws.rs</groupId>
+                    <artifactId>jsr311-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -41,30 +47,30 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
-            <version>4.8.1</version>
+            <version>4.12</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
-            <version>1.9.5</version>
+            <version>1.10.19</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-common</artifactId>
-            <version>2.22.2</version>
+            <version>2.29.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>3.0.2</version>
+            <version>4.1.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.3</version>
+            <version>2.10.4</version>
         </dependency>
 
     </dependencies>
@@ -75,10 +81,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -90,15 +95,26 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+
             <!-- To launch *IT tests on verify phase -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.16</version>
+                <version>2.22.2</version>
                 <configuration>
                     <testSourceDirectory></testSourceDirectory>
                     <encoding>UTF-8</encoding>
-                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m -Dfile.encoding=UTF-8</argLine>
+                    <argLine>--illegal-access=permit -Xms512m -Xmx1024m -XX:MaxPermSize=512m -Dfile.encoding=UTF-8</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -122,7 +138,7 @@
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.16.7</version>
+                <version>0.31.0</version>
                 <configuration>
                     <dockerHost>unix:///var/run/docker.sock</dockerHost>
                     <images>
@@ -176,7 +192,7 @@
             <plugin>
                 <groupId>com.github.kongchen</groupId>
                 <artifactId>swagger-maven-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.1.8</version>
                 <configuration>
                     <apiSources>
                         <apiSource>
@@ -199,7 +215,7 @@
                             <templatePath>${basedir}/src/test/resources/swagger/strapdown.html.hbs</templatePath>
                             <outputPath>${basedir}/swagger-ui/chispazo/api.html</outputPath>
                             <swaggerDirectory>${basedir}/swagger-ui/chispazo</swaggerDirectory>
-                            <swaggerApiReader>com.wordnik.swagger.jaxrs.reader.DefaultJaxrsApiReader</swaggerApiReader>
+                            <outputFormats>json</outputFormats>
                         </apiSource>
                     </apiSources>
                 </configuration>
